skims\feat(cross): #2294.1 base structure
Former-commit-id: 2b9c3f5fad78eccc30f90e7652a3914482893819

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -15,3 +15,7 @@
 /front/.eslintrc.json @mnorenaatfluid @kamadoatfluid
 /front/tslint.json @mnorenaatfluid @kamadoatfluid
 /mobile/tslint.json @mnorenaatfluid @kamadoatfluid
+
+/forces @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
+/skims @jrestrepoatfluid @kamadoatfluid
+/sorts @jrestrepoatfluid @kamadoatfluid
