--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -292,16 +292,20 @@ deploy_k8s_stop_ephemeral:
   <<: *with_nix
   stage: deploy-app
   retry: 1
-  when: manual
-  except:
-    refs:
-      - master
-      - merge_requests
-      - schedules
-      - triggers
   environment:
     name: "review/$CI_COMMIT_REF_SLUG"
     action: stop
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "master"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: *integrates_commit_pattern
+      when: manual
 
 deploy_mobile_ota:
   <<: *with_nix
