--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -9,13 +9,13 @@
 /django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid @acuberosatfluid @kamadoatfluid
 
 # Linter approvers
-/build/include/linter-jobs.sh @mnorenaatfluid @kamadoatfluid
-/app/static/graphics/.eslintrc @mnorenaatfluid @kamadoatfluid
-/front/.eslintignore @mnorenaatfluid @kamadoatfluid
-/front/.eslintrc.json @mnorenaatfluid @kamadoatfluid
-/front/tslint.json @mnorenaatfluid @kamadoatfluid
-/mobile/tslint.json @mnorenaatfluid @kamadoatfluid
+/build/include/linter-jobs.sh @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
+/app/static/graphics/.eslintrc @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
+/front/.eslintignore @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
+/front/.eslintrc.json @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
+/front/tslint.json @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
+/mobile/tslint.json @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
 
 /forces @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
 /skims @jrestrepoatfluid @kamadoatfluid
-/sorts @jrestrepoatfluid @kamadoatfluid
+/sorts @jrestrepoatfluid @kamadoatfluid @acuberosatfluid
