--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,10 @@ stages:
   - scheduler
 
 .commit_stages:
-  - &integrates_commit_pattern '$CI_COMMIT_TITLE =~ /^integrates/ || $CI_COMMIT_TITLE =~ /^all/'
-  - &forces_commit_pattern '$CI_COMMIT_TITLE =~ /^forces/ || $CI_COMMIT_TITLE =~ /^all/'
-  - &all_commit_pattern '$CI_COMMIT_TITLE =~ /^forces/ || $CI_COMMIT_TITLE =~ /^integrates/ || $CI_COMMIT_TITLE =~ /^all/'
+  - &all_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces|integrates|skims)/'
+  - &forces_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|forces)/'
+  - &integrates_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|integrates)/'
+  - &skims_commit_pattern '$CI_COMMIT_TITLE =~ /^(all|skims)/'
 
 .in_everywhere_except_periodic_jobs_and_mrs_integrates: &in_everywhere_except_periodic_jobs_and_mrs_integrates
   rules:
@@ -112,6 +113,16 @@ stages:
   script:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
+
+.skims_in_dev_and_master_branch: &skims_in_dev_and_master_branch
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: *skims_commit_pattern
 
 .analytics_template: &analytics_template
   <<: *with_nix
@@ -618,3 +629,8 @@ danger:
     - npm install @commitlint/{config-conventional,cli}
   script:
     - danger --verbose --fail-on-errors=true
+
+skims_lint:
+  <<: *with_nix
+  <<: *skims_in_dev_and_master_branch
+  stage: lint-code
