--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,6 +114,16 @@ stages:
     - ./build.sh "${CI_JOB_NAME% *}"
   interruptible: true
 
+.all_in_dev_and_master_branch: &all_in_dev_and_master_branch
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: *all_commit_pattern
+
 .skims_in_dev_and_master_branch: &skims_in_dev_and_master_branch
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
@@ -496,7 +506,7 @@ lint_graphics:
 
 lint_build_system:
   <<: *with_nix
-  <<: *in_dev_and_master_branch_integrates
+  <<: *all_in_dev_and_master_branch
   stage: lint-code
 
 lint_mobile:
