skims\feat(cross): #2294.5 test system
Former-commit-id: 638fa74c68b0a3a2422bc675c1938c1822e18000

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -644,3 +644,8 @@ skims_lint:
   <<: *with_nix
   <<: *skims_in_dev_and_master_branch
   stage: lint-code
+
+skims_test:
+  <<: *with_nix
+  <<: *skims_in_dev_and_master_branch
+  stage: test-code
