--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,6 +134,18 @@ stages:
       when: never
     - if: *skims_commit_pattern
 
+.skims_in_master_branch: &skims_in_master_branch
+  rules:
+    - if: '$CI_COMMIT_BRANCH != "master"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: *skims_commit_pattern
+
 .analytics_template: &analytics_template
   <<: *with_nix
   artifacts:
@@ -641,6 +653,11 @@ danger:
     - npm install @commitlint/{config-conventional,cli}
   script:
     - danger --verbose --fail-on-errors=true
+
+skims_deploy:
+  <<: *with_nix
+  <<: *skims_in_master_branch
+  stage: deploy-app
 
 skims_lint:
   <<: *with_nix
