--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -211,43 +211,43 @@ scheduler_delete_pending_projects:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_delete_pending_projects]
+    variables: [$delete_pending_projects]
 
 scheduler_reset_expired_accepted_findings:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_reset_expired_accepted_findings]
+    variables: [$reset_expired_accepted_findings]
 
 scheduler_update_indicators:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_update_indicators]
+    variables: [$update_indicators]
 
 scheduler_get_new_releases:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_get_new_releases]
+    variables: [$get_new_releases]
 
 scheduler_get_remediated_findings:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_get_remediated_findings]
+    variables: [$get_remediated_findings]
 
 scheduler_get_new_vulnerabilities:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_get_new_vulnerabilities]
+    variables: [$get_new_vulnerabilities]
 
 scheduler_send_unsolved_to_all:
   <<: *scheduler_prod_template
   only:
     refs: [schedules]
-    variables: [$scheduler_send_unsolved_to_all]
+    variables: [$send_unsolved_to_all]
 
 build_front:
   <<: *with_nix
