forces\feat(job): #2261.6 add integrates basic queries
- enable linter


Former-commit-id: 4accfc658182ff6c14ac94f05e7e97a2c62ee38b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -664,7 +664,7 @@ skims_test:
   <<: *skims_in_dev_and_master_branch
   stage: test-code
 
-.forces_lint:
+forces_lint:
   <<: *with_nix
   <<: *forces_in_dev_and_master_branch
   stage: lint-code
