integrates\fix(job): #2301.1 remove integrates pattern
- If the last master commit is skims|forces then the nightly build
  for integrates do not run
- Change the var according to the convention

Closes #2301


Former-commit-id: b065348da67ed9e0689ea0debd472ce722591390

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,9 +102,9 @@ stages:
   rules:
     - if: '$CI_PIPELINE_SOURCE != "schedule"'
       when: never
-    - if:  '$NIGHTLY_BUILD == null'
+    - if:  '$integrates_nightly_build == null'
       when: never
-    - if: *integrates_commit_pattern
+    - when: always
 
 .with_nix: &with_nix
   tags: [autoscaling]
