--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -29,7 +29,7 @@ pytest-asyncio = "0.14.0"
 pytest-cov = "2.10.0"
 
 [tool.poetry.scripts]
-skims = 'cli:main'
+skims = 'cli:dispatch'
 
 [build-system]
 requires = [
