--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -238,6 +238,16 @@ apply_infra_autoscaling_ci:
   <<: *in_master_branch
   stage: deploy
 
+test_infra_dns:
+  <<: *with_nix
+  <<: *in_dev_branch
+  stage: test
+
+apply_infra_dns:
+  <<: *with_nix
+  <<: *in_master_branch
+  stage: deploy
+
 apply_config_autoscaling_ci:
   <<: *with_nix
   <<: *in_master_branch
