integrates\refac(front): #1719.28 split fields file
- Create a fields folder.
- Move AutoCompleteText component to its own file.


Former-commit-id: d5069010adfe06239f08d072a8be65cef1344673

--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -2,7 +2,8 @@
 
 src/resources/
 src/scenes/
-src/utils/forms
+src/utils/forms/fields/index.tsx
+src/utils/forms/index.spec.tsx
 src/utils/hooks
 src/utils/secureStore
 src/utils/*.ts
