--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -311,7 +311,7 @@ deploy_k8s_back_ephemeral:
   needs: [build_container_app]
   retry: 1
   environment:
-    name: "review/$CI_COMMIT_REF_SLUG"
+    name: "ephemeral/$CI_COMMIT_REF_SLUG"
     url: "https://$CI_COMMIT_REF_SLUG.$CI_PROJECT_NAME.env.fluidattacks.com/integrates"
     on_stop: deploy_k8s_stop_ephemeral
 
@@ -338,7 +338,7 @@ deploy_k8s_stop_ephemeral:
   stage: deploy-app
   retry: 1
   environment:
-    name: "review/$CI_COMMIT_REF_SLUG"
+    name: "ephemeral/$CI_COMMIT_REF_SLUG"
     action: stop
   rules:
     - if: '$CI_PIPELINE_SOURCE == "master"'
@@ -538,7 +538,7 @@ renew_certificates:
   <<: *in_schedule_nightly_build_integrates
   stage: post-deploy
   environment:
-    name: "review/renew-review-cert"
+    name: "ephemeral/renew-ephemeral-cert"
     auto_stop_in: 1 hour
 
 rotate_jwt_token:
