--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -16,6 +16,7 @@ repository = "https://gitlab.com/fluidattacks/integrates/-/tree/master/skims"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
+aiofiles = "0.5.0"
 aiogqlc = "1.0.5"
 click = "7.1.2"
 more-itertools = "8.4.0"
