--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -1,12 +1,12 @@
 # Default approvers
-* @mnorenaatfluid @aroldanatfluid @dacevedoatfluid @acuberosatfluid @jrestrepoatfluid @ralvarezatfluid @kamadoatfluid
+* @mnorenaatfluid @jrestrepoatfluid @ralvarezatfluid @kamadoatfluid
 
 # Front approvers
-/front/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid @jrestrepoatfluid @kamadoatfluid
-/mobile/ @dacevedoatfluid @mnorenaatfluid @acuberosatfluid @jrestrepoatfluid @kamadoatfluid
+/front/ @dacevedoatfluid @mnorenaatfluid @jrestrepoatfluid @kamadoatfluid
+/mobile/ @dacevedoatfluid @mnorenaatfluid @jrestrepoatfluid @kamadoatfluid
 
 # Back approvers
-/django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid @acuberosatfluid @kamadoatfluid
+/django-apps/integrates-back-async/backend/authz/ @jrestrepoatfluid @mnorenaatfluid @kamadoatfluid
 
 # Linter approvers
 /build/include/linter-jobs.sh @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
