forces\feat(job): #2261.10 add base tests
- add api client test


Former-commit-id: ed705afca02e503fb7f356b282228b561d6e43bc

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -668,3 +668,8 @@ forces_lint:
   <<: *with_nix
   <<: *forces_in_dev_and_master_branch
   stage: lint-code
+
+forces_test:
+  <<: *with_nix
+  <<: *forces_in_dev_and_master_branch
+  stage: test-code
