--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -20,10 +20,13 @@ python = "^3.8"
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
 mypy = "0.770"
+pytest = "5.4.3"
+pytest-asyncio = "0.14.0"
+pytest-cov = "2.10.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
-forces = 'cli:main'
+forces = 'forces.cli:main'
