--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -170,7 +170,10 @@
     "react/jsx-boolean-value": ["error", "always"],
     "react/jsx-curly-brace-presence": ["error", "always"],
     "react/jsx-max-depth": "off",
-    "react/jsx-no-literals": ["error", { "allowedStrings": ["&nbsp;"] }],
+    "react/jsx-no-literals": [
+      "error",
+      { "allowedStrings": ["&nbsp;", "&hellip;"] }
+    ],
     "react/function-component-definition": [
       "error",
       {
