--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -9,6 +9,7 @@ packages = [
   { include = "apis", from = "src" },
   { include = "cli", from = "src" },
   { include = "core", from = "src" },
+  { include = "model", from = "src" },
   { include = "utils", from = "src" },
 ]
 readme = "./README.md"
@@ -21,6 +22,7 @@ aiogqlc = "1.0.5"
 click = "7.1.2"
 more-itertools = "8.4.0"
 python = "^3.7"
+"ruamel.yaml" = "0.16.10"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.770"
