--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -33,6 +33,7 @@ mysqlclient==1.4.6
 newrelic==5.14.0.142
 oauth2client==4.1.3
 openpyxl==3.0.3
+lxml==4.5.2
 pillow==7.2.0
 pykwalify==1.7.0
 pypdf4==1.27.0
