skims\refac(back): #2294.33 integrates sdk
- Make the integrates sdk a first-class package, this reduces coupling
  and makes simple to separate it in a future to offer the SDK
  as a product alone
- Also the more packages and the smaller they are the best arch


Former-commit-id: f98c2c275783a99719939396500c03781f0615e6

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -12,9 +12,9 @@ description = "Deterministic vulnerability life-cycle reporting and closing tool
 license = "MPL-2.0"
 name = "skims"
 packages = [
-  { include = "apis", from = "src" },
   { include = "cli", from = "src" },
   { include = "core", from = "src" },
+  { include = "integrates", from = "src" },
   { include = "model", from = "src" },
   { include = "utils", from = "src" },
 ]
