forces\feat(job): #2261.15 add release to docker hub
Former-commit-id: f7e2eb94fdf24c91f8f7dbcbc76b1aaeab8c7c91

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -689,4 +689,11 @@ forces_test:
 forces_deploy:
   <<: *with_nix
   <<: *forces_in_master_branch
+  stage: build
+
+forces_deploy_to_docker_hub:
+  <<: *with_nix
+  <<: *forces_in_master_branch
   stage: deploy-app
+  needs:
+    - forces_deploy
