--- a/.envrc.public
+++ b/.envrc.public
@@ -17,6 +17,7 @@ export CI_REGISTRY='registry.gitlab.com'
 export CI_REGISTRY_IMAGE="${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}"
 export CI_REPOSITORY_URL="https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@gitlab.com/fluidattacks/integrates.git"
 export CI_COMMIT_REF_SLUG
+export DOCKER_HUB_URL='https://index.docker.io/v1/'
 export FALSE=''
 export GITLAB_API_URL="https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/variables"
 export POETRY_VIRTUALENVS_CREATE='true'
