integrates\feat(front): #1719.38 add jsx-a11y plugin
- Fix missing alt text in Preloader component.
- Fix wrong use of anchor tag in approve and delete formatters.
- Fix missing title prop on iframes tags in Graphic component.
- Fix wrong use of li tag in AutoCompleteText component.


Former-commit-id: 4266d1db6ad7688af0658868736808802c62ee60

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -19,7 +19,8 @@
     "fp",
     "prettier",
     "jest",
-    "jest-formatting"
+    "jest-formatting",
+    "jsx-a11y"
   ],
   "extends": [
     "eslint:recommended",
@@ -28,6 +29,7 @@
     "plugin:jest/all",
     "plugin:jest-formatting/strict",
     "plugin:fp/recommended",
+    "plugin:jsx-a11y/strict",
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint",
     "prettier/react"
@@ -160,6 +162,11 @@
         "toBeFalsy": "Avoid `toBeFalsy`, use `toBe(false)` instead."
       }
     ],
+    /*
+     * This rule requires the type attribute to be a string literal, because of
+     * that it has a conflic with react/jsx-curly-brace-presence.
+     */
+    "react/button-has-type": "off",
     "react/jsx-filename-extension": [
       "error",
       {
