--- a/front/package.json
+++ b/front/package.json
@@ -124,6 +124,7 @@
     "eslint-plugin-fp": "2.3.0",
     "eslint-plugin-jest": "23.17.1",
     "eslint-plugin-jest-formatting": "2.0.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.20.3",
     "eslint-plugin-react-hooks": "4.0.5",
