--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -1,12 +1,18 @@
+[build-system]
+requires = [
+  "poetry==1.0.9"
+]
+build-backend = "poetry.masonry.api"
+
 [tool.poetry]
 authors = [
-  "Product Team <development@fluidattacks.com>"
+  "Product Team <development@fluidattacks.com>",
 ]
 classifiers = [
-    "Development Status :: 4 - Beta",
-    "Environment :: Console",
-    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
-    "Topic :: Security",
+  "Development Status :: 4 - Beta",
+  "Environment :: Console",
+  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
+  "Topic :: Security",
 ]
 description = "Deterministic vulnerability life-cycle reporting and closing tool"
 license = "MPL-2.0"
@@ -32,15 +38,10 @@ python = "^3.7"
 [tool.poetry.dev-dependencies]
 mypy = "0.782"
 prospector = "1.3.0"
+pydeps = "1.9.4"
 pytest = "5.4.3"
 pytest-asyncio = "0.14.0"
 pytest-cov = "2.10.0"
 
 [tool.poetry.scripts]
 skims = 'cli:dispatch'
-
-[build-system]
-requires = [
-  "poetry==1.0.9"
-]
-build-backend = "poetry.masonry.api"
