integrates\refac(front): #1719.40 lint secure_store
Former-commit-id: 873601697910f10e98a6c7231ea82c2e05d86e05

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -119,6 +119,12 @@
      * consistency.
      */
     "@typescript-eslint/prefer-function-type": "off",
+    "@typescript-eslint/no-type-alias": [
+      "error",
+      {
+        "allowAliases": "always"
+      }
+    ],
     "@typescript-eslint/typedef": [
       "error",
       {
