skims\perf(back): #2294.46 organize calls and filters
- Add filters and more concurrency, pass as arguments common
  values instead of computing them multiple times


Former-commit-id: 799431ac077410454c2e369ddd56378e69e4b4c7

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -21,6 +21,7 @@ packages = [
   { include = "cli", from = "src" },
   { include = "core", from = "src" },
   { include = "integrates", from = "src" },
+  { include = "lib_path", from = "src" },
   { include = "utils", from = "src" },
 ]
 readme = "./README.md"
