--- a/reviews/pyproject.toml
+++ b/reviews/pyproject.toml
@@ -29,6 +29,7 @@ python = "^3.7"
 [tool.poetry.dev-dependencies]
 mypy = "0.782"
 prospector = "1.3.0"
+pydeps = "1.9.4"
 
 [tool.poetry.scripts]
 reviews = 'cli:entrypoint'
