integrates\fix(cross): #2335.1 hide users tab for roles
- Only show the user tab to User Manager role.
- Restrict the API to get organization users as well.


Former-commit-id: 677acca663d1e9442c9f62544f9160b6bc651e46

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -397,6 +397,7 @@ deploy_permissions_matrix:
     expire_in: 1 day
     paths:
       - deploy/permissions-matrix/group_level.html
+      - deploy/permissions-matrix/organization_level.html
       - deploy/permissions-matrix/user_level.html
     when: on_success
 
