--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -33,7 +33,8 @@ aiofiles = "0.5.0"
 aiogqlc = "1.0.5"
 click = "7.1.2"
 more-itertools = "8.4.0"
-python = "^3.7"
+pyparsing = "2.4.7"
+python = "^3.8"
 "ruamel.yaml" = "0.16.10"
 
 [tool.poetry.dev-dependencies]
