skims\perf(back): #2294.49 use uvloop
Former-commit-id: 1b1a6ae839c210728bd115718ea7af0bc0297ffb

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -36,6 +36,7 @@ more-itertools = "8.4.0"
 pyparsing = "2.4.7"
 python = "^3.8"
 "ruamel.yaml" = "0.16.10"
+uvloop = "0.14.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.782"
