--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -36,7 +36,7 @@ more-itertools = "8.4.0"
 pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
-"ruamel.yaml" = "0.16.10"
+ruamel-yaml = "0.16.10"
 uvloop = "0.14.0"
 
 [tool.poetry.dev-dependencies]
