--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -2,7 +2,10 @@
 
 src/resources/
 src/scenes/
-src/utils/*.ts
+src/utils/apollo.ts
+src/utils/cvss.ts
+src/utils/formatHelpers.ts
+src/utils/validations.ts
 src/utils/*.tsx
 src/**/*.css.d.ts
 src/**/*.d.ts
