--- a/.envrc.public
+++ b/.envrc.public
@@ -21,6 +21,7 @@ export CI_COMMIT_BEFORE_SHA
 export CI_COMMIT_SHA
 export CI_NODE_INDEX
 export CI_NODE_TOTAL
+export MR_TEST_MAX_DELTAS
 
 test -n "${CI:-}" \
   || CI=''
@@ -34,3 +35,5 @@ test -n "${CI_NODE_INDEX:-}" \
   || CI_NODE_INDEX='1'
 test -n "${CI_NODE_TOTAL:-}" \
   || CI_NODE_TOTAL='1'
+test -n "${MR_TEST_MAX_DELTAS:-}" \
+  || MR_TEST_MAX_DELTAS='200'
