--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -27,6 +27,7 @@ httpx==0.13.3
 httplib2==0.18.1
 idna==2.9
 jinja2==2.11.2
+mandrill-really-maintained==1.2.4
 matplotlib==3.2.1
 mixpanel==4.5.0
 mysqlclient==1.4.6
