--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -13,10 +13,13 @@ version = "1.0.0"
 [tool.poetry.dependencies]
 aiohttp = "3.6.2"
 click = "7.1.2"
+python-dateutil = "2.8.1"
+gitpython = "3.1.7"
 gql = "3.0.0a1"
 oyaml = "0.9"
 python-jose = "3.1.0"
 python = "^3.8"
+uvloop = "0.14.0"
 
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
