--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,9 @@
     "@apollo/react-common": "3.1.4",
     "@apollo/react-components": "3.1.5",
     "@apollo/react-hooks": "3.1.5",
+    "@bugsnag/core": "7.2.1",
+    "@bugsnag/js": "7.2.1",
+    "@bugsnag/plugin-react": "7.2.1",
     "@casl/ability": "4.1.5",
     "@casl/react": "2.1.1",
     "@nivo/axes": "0.62.0",
