--- a/.envrc.public
+++ b/.envrc.public
@@ -1,6 +1,5 @@
 # shellcheck shell=bash
 
-export CHANGELOG
 export CI
 export CI_API_V4_URL='https://gitlab.com/api/v4'
 export CI_COMMIT_AUTHOR
@@ -9,6 +8,8 @@ export CI_COMMIT_REF_NAME
 export CI_COMMIT_SHA
 export CI_NODE_INDEX
 export CI_NODE_TOTAL
+export CHANGELOG
+export MR_TEST_MAX_DELTAS
 export CI_PROJECT_ID='4620828'
 export CI_PROJECT_NAME='integrates'
 export CI_PROJECT_NAMESPACE='fluidattacks'
@@ -45,3 +46,5 @@ test -n "${CHANGELOG:-}" \
   || CHANGELOG=$(
       git log --format='[%h] %s' "${CI_COMMIT_BEFORE_SHA}..${CI_COMMIT_SHA}" \
         | sed -ze 's/\n/\\n/g' -e 's/\"/\\"/g')
+test -n "${MR_TEST_MAX_DELTAS:-}" \
+  || MR_TEST_MAX_DELTAS='200'
