--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -661,23 +661,10 @@ lint_commit_msg:
       - triggers
   stage: lint-code
 
-danger:
-  <<: *in_mrs
-  tags: [autoscaling]
-  needs: []
+reviews:
+  <<: *with_nix
   stage: merge-request
-  image: fluidattacks/danger-ruby
-  variables:
-    DANGER_GITLAB_API_TOKEN: $DANGER_TOKEN
-  before_script:
-    - curl -LOJ https://static-objects.gitlab.net/fluidattacks/public/raw/master/commitlint-configs/integrates/parser-preset.js
-    - curl -LOJ https://static-objects.gitlab.net/fluidattacks/public/raw/master/commitlint-configs/integrates/commitlint.config.js
-    - export CI_MERGE_REQUEST_ID=$(git ls-remote -q origin merge-requests\*\head
-      | grep ${CI_COMMIT_SHA}
-      | sed 's/.*refs\/merge-requests\/\([0-9]*\)\/head/\1/g')
-    - npm install @commitlint/{config-conventional,cli}
-  script:
-    - danger --verbose --fail-on-errors=true
+  <<: *in_mrs
 
 skims_deploy:
   <<: *with_nix
