integrates\refac(back): #2347.3 scheduler update portfolio
- Add function to update portfolios a couple of times a day.
- It takes from the old function but it adjusts it to the new
  structure and improves performance.
- Fix some default values in finding information.
- Remove cronjobs since they are scheduled using the CI.


Former-commit-id: b1e1831c621f758d5ab795fd58b31730fa8c6cf1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -248,6 +248,12 @@ scheduler_update_indicators:
     refs: [schedules]
     variables: [$update_indicators]
 
+scheduler_update_portfolios:
+  <<: *scheduler_prod_template
+  only:
+    refs: [schedules]
+    variables: [$update_portfolios]
+
 scheduler_get_new_releases:
   <<: *scheduler_prod_template
   only:
