--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -40,6 +40,7 @@ ruamel-yaml = "0.16.10"
 uvloop = "0.14.0"
 
 [tool.poetry.dev-dependencies]
+bandit = "1.6.2"
 mypy = "0.782"
 prospector = "1.3.0"
 pydeps = "1.9.4"
