skims\feat(cross): #2294.69 terraform hcl config
- Skims will use the Hashicorp Configuration Language (HCL) to
  declaratively define the skims analysys and persisting system
- This is the same syntax that terrafor uses
- Will wire it up into the CLI in next MR
- (Hint: if we wanted to, we are 100-200 lines away of Go code
  of having a terraform apply run Skims, we don't want to for now)


Former-commit-id: 31c797ef0be0b7c41e612a82400d6a746e9ec12e

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -19,6 +19,7 @@ license = "MPL-2.0"
 name = "skims"
 packages = [
   { include = "cli", from = "src" },
+  { include = "config", from = "src" },
   { include = "core", from = "src" },
   { include = "integrates", from = "src" },
   { include = "lib_path", from = "src" },
@@ -34,6 +35,7 @@ aiogqlc = "1.0.5"
 click = "7.1.2"
 more-itertools = "8.4.0"
 pillow = "7.2.0"
+pyhcl = "0.4.4"
 pyparsing = "2.4.7"
 python = "^3.8"
 ruamel-yaml = "0.16.10"
