skims\feat(cross): #2294.71 custom font
Former-commit-id: 9a37579e61e617e02c071e8bf365cca856ba6d10

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -15,6 +15,9 @@ classifiers = [
   "Topic :: Security",
 ]
 description = "Deterministic vulnerability life-cycle reporting and closing tool"
+include = [
+  "vendor/**/*",
+]
 license = "MPL-2.0"
 name = "skims"
 packages = [
