skims\feat(back): #2294.72 watermark
Former-commit-id: 11b56119c23e6e267052e9bec235c8147190b014

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 ]
 description = "Deterministic vulnerability life-cycle reporting and closing tool"
 include = [
+  "static/**/*",
   "vendor/**/*",
 ]
 license = "MPL-2.0"
