--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -37,9 +37,9 @@ version = "1.0.0"
 aiofiles = "0.5.0"
 aiogqlc = "1.0.5"
 click = "7.1.2"
+confuse = "1.3.0"
 more-itertools = "8.4.0"
 pillow = "7.2.0"
-pyhcl = "0.4.4"
 pyparsing = "2.4.7"
 python = "^3.8"
 ruamel-yaml = "0.16.10"
