--- a/reviews/pyproject.toml
+++ b/reviews/pyproject.toml
@@ -21,10 +21,11 @@ repository = "https://gitlab.com/fluidattacks/product/-/tree/master/reviews"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
-python-gitlab = "2.4.0"
-GitPython = "3.1.7"
 click = "7.1.2"
+confuse = "1.3.0"
+GitPython = "3.1.7"
 python = "^3.7"
+python-gitlab = "2.4.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "0.782"
@@ -32,7 +33,7 @@ prospector = "1.3.0"
 pydeps = "1.9.4"
 
 [tool.poetry.scripts]
-reviews = 'cli:entrypoint'
+reviews = 'cli:reviews'
 
 [build-system]
 requires = [
