skims\feat(cross): #2294.76 languages
Former-commit-id: effd42f4f0440ada3e59ff4530c84eb2e0efebc0

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -28,6 +28,7 @@ packages = [
   { include = "integrates", from = "src" },
   { include = "lib_path", from = "src" },
   { include = "utils", from = "src" },
+  { include = "zone", from = "src" },
 ]
 readme = "./README.md"
 repository = "https://gitlab.com/fluidattacks/integrates/-/tree/master/skims"
