--- a/front/package.json
+++ b/front/package.json
@@ -46,6 +46,7 @@
     "@types/revalidate": "1.1.2",
     "@types/sjcl": "1.0.29",
     "@types/topojson-client": "3.0.0",
+    "@types/webpack-bugsnag-plugins": "1.4.0",
     "@types/yargs": "15.0.5",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
@@ -152,6 +153,7 @@
     "waait": "1.0.5",
     "wait-for-expect": "3.0.2",
     "webpack": "4.43.0",
+    "webpack-bugsnag-plugins": "1.4.3",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
   },
