skims\feat(back): #2294.82 process visible lang
- Do some tricks so all processes running are able to see
  the current language


Former-commit-id: ed52c9d989e0cff039009b5676670320ebff5fef

--- a/skims/static/translations.yaml
+++ b/skims/static/translations.yaml
@@ -28,8 +28,8 @@ utils.model.finding.enum.f0034.recommendation:
     strong by experts in the field, and select well-tested
     implementations with adequate length seeds.
   es: >
-    Utilice un algoritmo bien examinado que se considere fuerte actualmente
-    por expertos en el campo, y seleccione implementaciones bien probadas
+    Utilizar un algoritmo bien examinado que se considere fuerte actualmente
+    por expertos en el campo, y seleccionar implementaciones bien probadas
     con semillas o vectores de inicialización de longitud adecuada.
 utils.model.finding.enum.f0034.requirements:
   en: |
