skims\perf(back): #2294.85 incremental testing
- Most of the time users only edit a few files in the target path
- Given that, it's a waste of resources to test repeteadly those
  unmodified files
- This introduces a cache for results, so from the second time
  forward skims only test for those modified files
- Inspired in the same technology of nix, hash the inputs,
  store the outputs
- This is generic though, so more applications may derive from it
- Analyzing Integrates the first time takes 18 seconds,
  now it takes 3 seconds
- Since the cache is resolved concurrently the time complexity
  scales pretty smooth


Former-commit-id: 5cc99596f6cd6206a7e7be209bf30c60eb66dbb1

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -27,6 +27,7 @@ packages = [
   { include = "core", from = "src" },
   { include = "integrates", from = "src" },
   { include = "lib_path", from = "src" },
+  { include = "state", from = "src" },
   { include = "utils", from = "src" },
   { include = "zone", from = "src" },
 ]
