skims\perf(cross): #2294.86 linters and dag
- Make the linters run faster by targetting them to the
  src/ folder instead to every single package
- Fix a circular import in the DAG so now we are like a river
  and data flows only in one direction
- Many deltas because git does not detect I'm moving a file
  so it counts it as deleted + added
- no-deltas-check
- no-deltas-test


Former-commit-id: ad382bdd3213c1e0049fc8e86e936da1fa8ab05b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -688,7 +688,7 @@ skims_structure:
   artifacts:
     expire_in: 1 week
     paths:
-      - skims
+      - skims/*.svg
     when: on_success
   stage: test-code
 
