--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -27,6 +27,7 @@ packages = [
   { include = "core", from = "src" },
   { include = "integrates", from = "src" },
   { include = "lib_path", from = "src" },
+  { include = "nvd", from = "src" },
   { include = "state", from = "src" },
   { include = "utils", from = "src" },
   { include = "zone", from = "src" },
@@ -38,6 +39,7 @@ version = "1.0.0"
 [tool.poetry.dependencies]
 aiofiles = "0.5.0"
 aiogqlc = "1.0.5"
+aiohttp = "3.6.2"
 click = "7.1.2"
 confuse = "1.3.0"
 more-itertools = "8.4.0"
