integrates\feat(job): #2261.25 execute new forces
Former-commit-id: 58760532d2c3bc3f045d084d4de9ae50908e2c23

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -654,6 +654,16 @@ forces_dynamic:
   allow_failure: true
   <<: *in_master_branch_integrates
 
+forces_new:
+  stage: post-deploy
+  tags: [autoscaling]
+  image: fluidattacks/forces:new
+  script:
+    - forces --token "${INTEGRATES_API_TOKEN}" --strict --group daimon -vv
+  interruptible: true
+  allow_failure: true
+  <<: *in_master_branch_integrates
+
 lint_commit_msg:
   <<: *with_nix
   except:
