--- a/forces/Dockerfile
+++ b/forces/Dockerfile
@@ -1,3 +1,11 @@
 FROM python:3.8-slim-buster
 
-RUN pip install forces
+RUN apt update
+
+RUN apt -y install git
+
+COPY . /pakage
+
+WORKDIR /pakage
+
+RUN pip install .
