--- a/.envrc.public
+++ b/.envrc.public
@@ -9,7 +9,7 @@ export CI_COMMIT_SHA
 export CI_NODE_INDEX
 export CI_NODE_TOTAL
 export CHANGELOG
-export MR_TEST_MAX_DELTAS
+export REVIEWS_MAX_DELTAS
 export CI_PROJECT_ID='4620828'
 export CI_PROJECT_NAME='integrates'
 export CI_PROJECT_NAMESPACE='fluidattacks'
@@ -46,5 +46,5 @@ test -n "${CHANGELOG:-}" \
   || CHANGELOG=$(
       git log --format='[%h] %s' "${CI_COMMIT_BEFORE_SHA}..${CI_COMMIT_SHA}" \
         | sed -ze 's/\n/\\n/g' -e 's/\"/\\"/g')
-test -n "${MR_TEST_MAX_DELTAS:-}" \
-  || MR_TEST_MAX_DELTAS='200'
+test -n "${REVIEWS_MAX_DELTAS:-}" \
+  || REVIEWS_MAX_DELTAS='200'
