forces\feat(build): #2261.27 use forces as entrypoint
Former-commit-id: 11a983f78f2e132e00ad8a02c1888b0c77bec281

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -658,7 +658,9 @@ forces_new:
   stage: post-deploy
   tags: [autoscaling]
   needs: []
-  image: fluidattacks/forces:new
+  image:
+    name: fluidattacks/forces:new
+    entrypoint: [""]
   script:
     - forces --token "${INTEGRATES_API_TOKEN}" --strict --group daimon -vv
   interruptible: true
