skims\feat(back): #2294.95 f011 model
Former-commit-id: f950a74f75ed959fe7b7f37322c32b57b5c3f4c4

--- a/skims/static/translations.yaml
+++ b/skims/static/translations.yaml
@@ -38,13 +38,6 @@ utils.model.finding.enum.f034.requirements:
   es: |
     R223. Los números aleatorios generados deben seguir una distribución uniforme.
     R224. Debe usarse el mecanismo criptográfico más seguro ofrecido por la plataforma.
-utils.model.finding.enum.f034.risk:
-  en: >
-    An attacker could guess the generation sequence within a
-    reasonable time or predict results using probabilistic methods.
-  es: >
-    Un atacante podría adivinar la secuencia de generación dentro de un
-    tiempo razonable o predecir resultados usando métodos probabilísticos.
 utils.model.finding.enum.f034.threat:
   en: >
     Autenticated attacker from the Internet.
@@ -53,3 +46,42 @@ utils.model.finding.enum.f034.threat:
 utils.model.finding.enum.f034.title:
   en: FIN.S.034. Insecure random number generation
   es: FIN.S.034. Generación de números aleatorios inseguros
+
+###
+
+src.lib_path.f011.npm_package_json.description:
+  en: Use of {product} at version {version} with {cve} in {path}
+  es: Uso de {product} en la version {version} con {cve} en {path}
+utils.model.finding.enum.f011.description:
+  en: >
+    The system uses the version of a software or dependency with known
+    vulnerabilities.
+  es: >
+    El sistema usa la version de un software o dependencia con vulnerabilidades
+    conocidas.
+utils.model.finding.enum.f011.impact:
+  en: >
+    Exploit found vulnerabilities in the affected components.
+  es: >
+    Explotar vulnerabilidades encontradas en los componentes afectados.
+utils.model.finding.enum.f011.recommendation:
+  en: >
+    Update the affected software to the versions recommended by the
+    manufacturer.
+  es: >
+    Actualizar el software afectado a las versiones recomendadas por el
+    fabricante.
+utils.model.finding.enum.f011.requirements:
+  en: |
+    R262. Verify third-party components.
+  es: >
+    R262. Los componentes provistos por terceros deben corresponder a versiones
+    estables, probadas y actualizadas.
+utils.model.finding.enum.f011.threat:
+  en: >
+    Autenticated attacker from the Internet.
+  es: >
+    Atacante autenticado desde Internet.
+utils.model.finding.enum.f011.title:
+  en: FIN.S.011. Use of software with known vulnerabilities
+  es: FIN.S.011. Uso de componentes con vulnerabilidades conocidas
