skims\feat(back): #2294.96 soft with vulns npm
- now skims analyzes package.json files and reports them to
  integrates
- no-deltas-test
- no-deltas-check


Former-commit-id: 3da2051d407ecb356480a906a6dfd156814fe027

--- a/skims/static/translations.yaml
+++ b/skims/static/translations.yaml
@@ -66,8 +66,7 @@ utils.model.finding.enum.f011.impact:
     Explotar vulnerabilidades encontradas en los componentes afectados.
 utils.model.finding.enum.f011.recommendation:
   en: >
-    Update the affected software to the versions recommended by the
-    manufacturer.
+    Update the affected software to the versions recommended by the vendor.
   es: >
     Actualizar el software afectado a las versiones recomendadas por el
     fabricante.
