forces\feat(build): #2261.28 split docker image
- in azure devops images cannot be used with ENTRYPOINT,
  add a base image that does not have it and a complete one


Former-commit-id: 46f90a7a4acae6b8263efd48f112746d7d93fb10

--- a/forces/Dockerfile
+++ b/forces/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster
+FROM python:3.8-slim-buster as base
 
 RUN apt update
 
@@ -9,5 +9,7 @@ COPY . /pakage
 WORKDIR /pakage
 
 RUN pip install .
+
+FROM base as complete
 
 ENTRYPOINT [ "forces" ]
