forces\feat(build): #2261.30 do not use entrypoint
Most likely the image will be used in CI, in order not to
have multiple images it is better to remove the entrypoint
and avoid compatibility problems


Former-commit-id: c09ef40f6d4d7253b07815e7a13769b51edd5274

--- a/forces/Dockerfile
+++ b/forces/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-slim-buster as base
+FROM python:3.8-slim-buster
 
 RUN apt update
 
@@ -9,7 +9,3 @@ COPY . /pakage
 WORKDIR /pakage
 
 RUN pip install .
-
-FROM base as complete
-
-ENTRYPOINT [ "forces" ]
