feat(job): #500.1 add new forces
Former-commit-id: a6aed04ba6178451b899cde423a70dc9a36b9a7d

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -438,6 +438,16 @@ test_forces_dynamic:
   <<: *in_master_branch
   stage: postdeploy
 
+test_forces_new:
+  tags: [autoscaling]
+  stage: postdeploy
+  needs: []
+  image: fluidattacks/forces:new
+  script:
+    - forces --token "${INTEGRATES_API_TOKEN}" --strict --group "${INTEGRATES_GROUP}" -vv
+  interruptible: true
+  allow_failure: true
+
 send_new_release_email:
   <<: *with_nix
   <<: *in_master_branch
