--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -20,6 +20,7 @@ oyaml = "0.9"
 python-jose = "3.1.0"
 python = "^3.8"
 uvloop = "0.14.0"
+pytz = "2020.1"
 
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
