--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,15 +25,17 @@
     "apollo-link-error": "1.1.13",
     "apollo-link-http": "1.5.17",
     "babel-plugin-inline-import": "3.0.0",
-    "expo": "38.0.8",
+    "expo": "38.0.9",
     "expo-app-auth": "9.1.1",
     "expo-constants": "9.1.1",
     "expo-device": "2.2.1",
     "expo-google-app-auth": "8.1.2",
     "expo-local-authentication": "9.1.1",
     "expo-localization": "8.2.1",
+    "expo-notifications": "0.3.3",
+    "expo-permissions": "9.0.1",
     "expo-secure-store": "9.0.1",
-    "expo-updates": "0.2.12",
+    "expo-updates": "0.2.14",
     "graphql": "14.7.0",
     "graphql-tag": "2.10.4",
     "i18next": "19.6.3",
@@ -45,25 +47,25 @@
     "react-native-paper": "4.0.1",
     "react-native-svg": "12.1.0",
     "react-router-native": "5.2.0",
-    "rollbar": "2.19.0"
+    "rollbar": "2.19.1"
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.4",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "1.0.6",
-    "@types/jest": "26.0.7",
+    "@types/jest": "26.0.8",
     "@types/react-dom": "16.9.8",
     "babel-preset-expo": "8.2.3",
     "bunyan": "1.8.14",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "expo-cli": "3.23.2",
-    "fetch-mock": "9.10.5",
-    "jest": "26.1.0",
+    "fetch-mock": "9.10.6",
+    "jest": "26.2.2",
     "jest-expo": "38.0.2",
     "react-dom": "16.13.1",
-    "ts-jest": "26.1.3",
-    "tslint": "6.1.2",
+    "ts-jest": "26.1.4",
+    "tslint": "6.1.3",
     "tslint-react": "5.0.0",
     "turtle-cli": "0.17.0",
     "typescript": "3.9.7"
