--- a/deploy/containers/app/requirements.txt
+++ b/deploy/containers/app/requirements.txt
@@ -25,6 +25,7 @@ graphql-core==3.0.3
 gunicorn==20.0.4
 httpx==0.13.3
 httplib2==0.18.1
+hyperlink==19.0.0
 idna==2.9
 jinja2==2.11.2
 mandrill-really-maintained==1.2.4
