integrates\feat(build): #2388 dont break for n commits
Former-commit-id: 6b33155bb62397340332592874486979e5d79a52

--- a/reviews.toml
+++ b/reviews.toml
@@ -37,7 +37,7 @@ fail = true
 user_regex = '^[A-Z][a-z]+ [A-Z][a-z]+$'
 
 [tests.max_commits_per_mr]
-fail = true
+fail = false
 max_commits = 1
 
 [tests.close_issue_directive]
