forces\feat(back): #2261.33 add bugsnag
Former-commit-id: 8f4d66bf1a33f97656f3f1445c858e292300400e

--- a/forces/pyproject.toml
+++ b/forces/pyproject.toml
@@ -21,6 +21,7 @@ python-jose = "3.1.0"
 python = "^3.8"
 uvloop = "0.14.0"
 pytz = "2020.1"
+bugsnag = "3.7.1"
 
 [tool.poetry.dev-dependencies]
 prospector = "1.2.0"
