integrates\fix(back): #2389.2 serial and autoscale
- change to a serial calling
- change tag for scheduler jobs: from autoscaling to autoscaling-large


Former-commit-id: 96445d669a309566a71ae8b28662dc5f1dc2bbb5

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -227,7 +227,7 @@ subscriptions_trigger_user_to_entity_report_prod_schedule:
   interruptible: false
   stage: scheduler
   image: "${CI_REGISTRY_IMAGE}/nix:scheduler_prod"
-  tags: [autoscaling]
+  tags: [autoscaling-large]
   script:
     - ./build.sh scheduler_prod "${CI_JOB_NAME/scheduler_/}"
 
